--- a/index.html
+++ b/index.html
@@ -295,6 +295,8 @@ Error message and password prompt
 
 <li>בית האננס ההוואי של אירי</li>
 
+<li>בצק פריך</li>
+
 <li>ג'וזף אברואה</li>
 
 <li>ג'ון אירווינג</li>
@@ -8509,7 +8511,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[פאי נקטרין]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8529,7 +8531,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170628144450952" title="$:/temp/search">
+<div created="20161023184814872" modified="20170701124810447" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8985,14 +8987,14 @@ Error message and password prompt
 
 ביתה הבכורה של [[ז'נבייב]]. היא ילידת 1995, ובקרוב תתחיל ללמוד פסיכולוגיה. בינתיים היא ממלצרת [[בקוסקוס|הקוסקוס]].</pre>
 </div>
-<div created="20170328195137638" modified="20170616151050257" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="אלפרד">
+<div created="20170328195137638" modified="20170630185410572" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="אלפרד">
 <pre>[img[pictures/alfred.jpg]]
 
 !!![[גורה]]:
 
 דברים לוקחים זמן. לקח לי זמן להיות יכולה לנסות לצייר את אלפרד ולכתוב עליו, אבל אלפרד הוא חלק בלתי נפרד מחיי ומחיי [[כולנו|האחיות כהן]]. כשהוא נכנס לחדר, נכנס ענן חם וטוב. הוא [[סבל|מסוכנת]] לא מעט בחייו, ובכל זאת נשאר אדם בעל לב טהור.
 
-הכרתי אותו בפריז, בלימודי התאטרון. הפכנו לזוג. רציתי אותו מאד, הוא עזב אותי, נפגעתי, חזרנו, נפצעתי, הייתי בקומה, התעוררתי מהקומה כעבור שלושה שבועות, זרקתי אותו לכל הרוחות, יויו שמר איתו על קשר, [[אמנו נפטרה|יויו וגורה]], דןדן ואני נסענו להודו להביא את אירי, חזרנו, עברנו [[לדירה|הדירה]], סלחתי לו, היה לנו טוב, [[דןדן נסע]], התפרקתי שוב, הוא השגיח עלי בעדינות, גם [[אביו|ג'וזף אברואה]].
+הכרתי אותו בפריז, בלימודי התאטרון. הפכנו לזוג. רציתי אותו מאד, הוא עזב אותי, נפגעתי, חזרנו, נפצעתי, הייתי בקומה, התעוררתי מהקומה כעבור שלושה שבועות, זרקתי אותו לכל הרוחות, יויו שמר איתו על קשר, [[אמנו נפטרה|יויו וגורה]], דןדן ואני [[נסענו להודו|מחפשת את אירי]] להביא את אירי, חזרנו, עברנו [[לדירה|הדירה]], סלחתי לו, היה לנו טוב, [[דןדן נסע]], התפרקתי שוב, הוא השגיח עלי בעדינות, גם [[אביו|ג'וזף אברואה]].
 
 הוא חכם, כשרוני, חרוץ, סקרן, לא מכיר בערך עצמו, כולל שאין לו מושג כמה שהוא חתיך.
 
@@ -9187,6 +9189,51 @@ Is where I want to be
 
 
 ליום הולדתה הרביעי קיבלה אירי מדודתה, שחזרה מביקור בהוואי, בית אננס עשוי בד מרופד. בתוך האננס גרו אבא הוואי, אימא הוואית, בתם הקטנה שלימים הפכה לזהבית נערת הגומי, ובייבי אננס שאירי אהבה להתפאר בו. ב[[ליל הדובונאז']] הלך הבייבי אננס לאיבוד, ואירי לגמרי ממורמרת על זה. מן הצד השני נוסד האתר [[דובונאז' אלסטיק|http://coensisters.org/doobonage.html]] </pre>
+</div>
+<div created="20170701112743899" modified="20170701114756744" tags="[[כשהם ישנים]]" title="בצק פריך">
+<pre>[img[pictures/b-parich.jpg]]
+
+!!![[אווה]]:
+
+לפני תחילת העבודה כמה דברים על בצק פריך:
+
+
+בצק פריך בסיסי זקוק לקמח, נוזלים ושומנים.
+מכאן כל תוספת תעשיר אותו
+
+*הקמח יכול להיות לבן, מלא, סולת, שקדים ועוד.
+*הנוזלים יכולים להיות, מים, חלב, מיץ, חלבונים..
+*השומנים יכולים להיות חמאה, מרגרינה, שמן, חלמונים, טחינה, שמנת חמוצה..
+
+ככל שהבצק יהיה עשיר ושומני כך יהיה קשה לעיבוד - כלומר - דביק יותר.
+
+עיבוד קצר וקור הם שני תנאים חשובים להצלחתו, ולכן, אם משטחים את הבצק ולא מרדדים, כדאי לקחת חתיכות לא גדולות, ובמהירות, עדינות ומינימום של שימוש בעוד קמח, משטחים למשטח אחיד.
+
+באופן אישי, לרוב, אני משתמשת בבצק פריך למאפים מתוקים - אך כמובן שגם לפאי או [[עוגיות מלוחות|עוגיות קימל]] הם מצויינים.
+
+המתכון הבא, מבחינת המרכיבים, הוא מתכון שמתאים כבסיס לפאי, הוא נח לרידוד ואפשר להכין ממנו גם עוגיות.מתאים לכל הבצקים הפריכים.
+
+אופן ההכנה מתאים לכל הבצקים הפריכים:
+
+החומרים:
+
+*200 גרם חמאה
+* 2 כפות סוכר
+* כף סוכר וניל
+* 2 כפות חלב
+* ביצה+חלמון
+* 2 כוסות ו 2/3 כוס קמח
+* כפית אבקת אפיה
+*קורט מלח
+
+במעבד מזון :
+
+1.  חמאה , סוכר , סוכר וניל  - עד למשחה חלקה
+
+2. מוסיפים את שאר החומרים ומעבדים עד לכדור בצק חלק 
+
+3.  עוטפים בניילון נצמד ומקררים כחצי שעה.
+</pre>
 </div>
 <div created="20170225204122418" modified="20170522173443649" tags="[[אחות כהן]]" title="ג'וזף אברואה">
 <pre>[img[pictures/jozef.jpg]]
@@ -10304,14 +10351,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 התלבטתי לגבי [[וויקליף|http://www.imdb.com/name/nm0419889/]], כי הוא גם [[פוליטיקאי]], שזה סוג של [[wrong livelihood|https://en.wikipedia.org/wiki/Noble_Eightfold_Path]], אך יחד עם זה הוא היה עם [[לורינוש|לורין היל]] [[בפוג'יז|http://www.imdb.com/name/nm2131536/?ref_=nm_ov_bio_lk2]]</pre>
 </div>
-<div created="20170606183630416" modified="20170606222915750" tags="[[אחיות חוץ]]" title="וינסנט ואן-גוך">
+<div created="20170606183630416" modified="20170630190410796" tags="[[אחיות חוץ]]" title="וינסנט ואן-גוך">
 <pre>[img[pictures/van-goch.jpg]]
 
 !!![[גורה]]:
 
 כן, מבחינת גובה האילן, אני מרשה לעצמי לכלול את [[וינסנט היקר|https://he.wikipedia.org/wiki/%D7%95%D7%99%D7%A0%D7%A1%D7%A0%D7%98_%D7%95%D7%90%D7%9F_%D7%92%D7%95%D7%9A]] ברשימת [[אחיות החוץ|אחיות חוץ]]. [[אנחנו|האחיות כהן]] אוהבות להתלות [[באילנות גבוהים|http://www.vangoghgallery.com/index.html]].
 
-כמו כן שמתי כאן ציור אישי שלי, כדי להגיד - ואן גוך [[ממש גרם לי|עם יויו באמסטרדם]] לרצות לצייר.
+כמו כן שמתי כאן ציור אישי שלי, ובענווה, כדי להגיד - ואן גוך [[ממש גרם לי|עם יויו באמסטרדם]] לרצות לצייר.
 
 ציירתי את החדר שלי הענקי - בו נשארתי לבד אחרי [[שדןדן נסע|דןדן נסע]], ורוקנתי אותו כמעט לגמרי.
 
@@ -10578,7 +10625,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170610184436279" modified="20170623140730442" tags="[[סיפורים אמיתיים]]" title="ילדים חד הוריים">
+<div created="20170610184436279" modified="20170630184906226" tags="[[סיפורים אמיתיים]]" title="ילדים חד הוריים">
 <pre>[img[pictures/yeladim-chad.jpg]]
 
 !!![[ראשל]]:
@@ -10589,7 +10636,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 היינו צריכים להביא יצירה שאהבנו במיוחד, מכל תחום שהוא.
 
-אני הבאתי את [[מישל גונדרי]] ויצירתו, [[אלפרד]] הכיר לי אותו , וממש התאהבתי באיך שהוא מראה דברים, אבל זה לא העיקר.
+אני הבאתי את [[מישל גונדרי]] ויצירתו, [[אלפרד]] הכיר לי אותו, וממש התאהבתי באיך שהוא מראה דברים, אבל זה לא העיקר.
 
 העיקר עבורי היה לשמוע את הסיפורים של הילדים בכיתה. [[זה|https://www.youtube.com/watch?v=aCs1rkAXZ9o]] לא הסיפור שלי, אבל זו הייתה מנה מספקת של כאב, לראות את [[אימא|ז'נבייב]] סובלת מאבא. 
 
@@ -12418,13 +12465,13 @@ May the lord bless your soul, I love you girl</pre>
 
 </pre>
 </div>
-<div created="20170629220725238" modified="20170630135855984" tags="[[כשהם ישנים]]" title="פאי נקטרין">
+<div created="20170629220725238" modified="20170701114841236" tags="[[כשהם ישנים]]" title="פאי נקטרין">
 <pre>[img[pictures/pie-naktarin.jpg]]
 
 !!![[אווה]]:
 
 
-(נקטרין, אפרסקים, שזיפים)
+(נקטרינות, אפרסקים, שזיפים)
 
 1.בסיס בצק פריך שקדים
 
@@ -12457,7 +12504,7 @@ May the lord bless your soul, I love you girl</pre>
 
 אופן ההכנה:
 
-1. מכינים את בצק מספר 1 באותו האופן שמכינים את הבצק של [[עוגיות הלימון|עוגיות חמאה ולימון]].
+1. מכינים את בצק מספר 1 באותו האופן שמכינים [[בצק פריך]]
 
 2. במעבד מזון מערבבים את כל החומרים לכדי משחה.
 
