--- a/index.html
+++ b/index.html
@@ -8513,7 +8513,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עוגיות חמאה ולימון]] [[פאי נקטרין]] שניצל [[עם הפנים החוצה]] מיזונפלציה [[בצק פריך]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8533,7 +8533,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170701143948557" title="$:/temp/search">
+<div created="20161023184814872" modified="20170701171949802" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9192,7 +9192,7 @@ Is where I want to be
 
 ליום הולדתה הרביעי קיבלה אירי מדודתה, שחזרה מביקור בהוואי, בית אננס עשוי בד מרופד. בתוך האננס גרו אבא הוואי, אימא הוואית, בתם הקטנה שלימים הפכה לזהבית נערת הגומי, ובייבי אננס שאירי אהבה להתפאר בו. ב[[ליל הדובונאז']] הלך הבייבי אננס לאיבוד, ואירי לגמרי ממורמרת על זה. מן הצד השני נוסד האתר [[דובונאז' אלסטיק|http://coensisters.org/doobonage.html]] </pre>
 </div>
-<div created="20170701112743899" modified="20170701114756744" tags="[[כשהם ישנים]]" title="בצק פריך">
+<div created="20170701112743899" modified="20170701172902198" tags="[[כשהם ישנים]] [[חיות אוכל]]" title="בצק פריך">
 <pre>[img[pictures/b-parich.jpg]]
 
 !!![[אווה]]:
@@ -9213,7 +9213,7 @@ Is where I want to be
 
 באופן אישי, לרוב, אני משתמשת בבצק פריך למאפים מתוקים - אך כמובן שגם לפאי או [[עוגיות מלוחות|עוגיות קימל]] הם מצויינים.
 
-המתכון הבא, מבחינת המרכיבים, הוא מתכון שמתאים כבסיס לפאי, הוא נח לרידוד ואפשר להכין ממנו גם עוגיות.מתאים לכל הבצקים הפריכים.
+המתכון הבא, מבחינת המרכיבים, הוא מתכון שמתאים כבסיס לפאי, הוא נח לרידוד ואפשר להכין ממנו גם עוגיות.
 
 אופן ההכנה מתאים לכל הבצקים הפריכים:
 
@@ -12018,7 +12018,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170627152813374" modified="20170627153921692" tags="[[כשהם ישנים]]" title="עוגיות חמאה ולימון">
+<div created="20170627152813374" modified="20170701172952935" tags="[[כשהם ישנים]] [[חיות אוכל]]" title="עוגיות חמאה ולימון">
 <pre>[img[pictures/ugiyot-limon.jpg]]
 
 !!![[אווה]]:
@@ -12482,7 +12482,7 @@ May the lord bless your soul, I love you girl</pre>
 
 </pre>
 </div>
-<div created="20170629220725238" modified="20170701114841236" tags="[[כשהם ישנים]]" title="פאי נקטרין">
+<div created="20170629220725238" modified="20170701172919965" tags="[[כשהם ישנים]] [[חיות אוכל]]" title="פאי נקטרין">
 <pre>[img[pictures/pie-naktarin.jpg]]
 
 !!![[אווה]]:
