--- a/index.html
+++ b/index.html
@@ -427,6 +427,8 @@ Error message and password prompt
 
 <li>יד ימין אינה יודעת</li>
 
+<li>יה</li>
+
 <li>יויו</li>
 
 <li>יויו וגורה</li>
@@ -8517,7 +8519,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עוגת פרג שוקולד]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עוגת פרג שוקולד]] הסינים ג'ונג יה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9268,7 +9270,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170323221312884" modified="20170527220228731" tags="[[אחות כהן]]" title="ג'ונג">
+<div created="20170323221312884" modified="20170703134352456" tags="[[אחות כהן]]" title="ג'ונג">
 <pre>[img[pictures/jong.jpg]]
 
 !!![[גורה]]:
@@ -9277,8 +9279,8 @@ Is where I want to be
 
 הוא [[ישות עצמאית|משתדלים לא להגזים]], הוא מעשן כבד, הוא חייכן. הוא טוב בהברגות, בסוף כל עבודה הוא עובר ובודק אם הכל מחובר ומוברג כמו שצריך, כך גם בצביעה.
 
-יש לו אחות, שצעירה ממנו בחמש שנים,
-והיא מגיעה איתו אלינו פה ושם.
+יש לו אחות שצעירה ממנו בחמש שנים, שמה [[ya|יה]]
+והיא [[אחות|אחות כהן]].
 
 מבחינתו גם כשהוא במטרו הוא לבד.
 
@@ -9947,7 +9949,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20161112205825183" modified="20170618190223939" title="הסינים">
+<div created="20161112205825183" modified="20170702183230212" title="הסינים">
 <pre>[img[pictures/hasinim.jpg]]
 
 !!![[גורה]]:
@@ -10593,6 +10595,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, יד ימין אינה יודעת, מה יד שמאל עושה. (ולהיפך).</pre>
+</div>
+<div created="20170702183413439" modified="20170702205221449" tags="[[אחות כהן]]" title="יה">
+<pre>[img[pictures/ya.jpg]]
+
+!!![[גורה]]:
+
+יה אחות של [[קואנג]],  היא - graceful, כמשמעות שמה. &quot;הוא לא אספרגר&quot;, היא תמיד אומרת על אחיה, &quot;הוא סתם שקוע בעולמו הפנימי&quot;.
+
+היא עושה תואר שני במדעי החיים אבל בשילוב עם מדעי הנפש, ועובדת בספריה של האוניברסיטה, וגם כמתרגלת במעבדה.
+
+התחברנו ממש, והיא אחות.</pre>
 </div>
 <div created="20161026214908307" modified="20170621135654890" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]]" title="יויו">
 <pre>!!![[אירי]]:
@@ -12184,7 +12197,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170702161916288" modified="20170702170654565" tags="[[חיות אוכל]] [[כשהם ישנים]]" title="עוגת פרג שוקולד">
+<div created="20170702161916288" modified="20170703134623714" tags="[[חיות אוכל]] [[כשהם ישנים]]" title="עוגת פרג שוקולד">
 <pre>[img[pictures/pereg-shokolad.jpg
 ]]
 
@@ -12218,7 +12231,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 4. טורפים בעדינות את השוקולד לתוך קציפת הביצים.
     
 
-5. מוסיפים פנימה את הפרג הטחון וממשיכים במטרפה הידנית בעדינות.
+5. מוסיפים פנימה את הפרג הטחון בכמה פעמים, וממשיכים במטרפה הידנית בעדינות.
 
     
 6.מוזגים את התערובת לתבניות, ואופים   40-50 דקות. העוגה מוכנה כשקיסם או סכין חדה יוצאים ממנה יבשים :)
