Battle for the Net widget

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@ DAMAGE.
 <title>גנזך האחיות כהן — געזונט הייטס, קומה מינוס 1, אצל סטלין</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~--><!--~~ Raw markup ~~-->
 <link rel="alternate" type="application/rss+xml" title="האחיות כהן" href="rss.xml">
+<script type="text/javascript">
+  var _bftn_options = {theme: 'slow'};
+</script>
+<script src="https://widget.battleforthenet.com/widget.js" async></script>
 </head>
 <body class="tc-body">
 <!--~~ Static styles ~~-->
