צן, משפציניםםקו רהיטים, הסדנה של קואנג ותי

--- a/index.html
+++ b/index.html
@@ -47,10 +47,6 @@ DAMAGE.
 <title>גנזך האחיות כהן — געזונט הייטס, קומה מינוס 1, אצל סטלין</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~--><!--~~ Raw markup ~~-->
 <link rel="alternate" type="application/rss+xml" title="האחיות כהן" href="rss.xml">
-<script type="text/javascript">
-  var _bftn_options = {theme: 'slow'};
-</script>
-<script src="https://widget.battleforthenet.com/widget.js" async></script>
 </head>
 <body class="tc-body">
 <!--~~ Static styles ~~-->
@@ -387,6 +383,8 @@ Error message and password prompt
 
 <li>הנה, כך</li>
 
+<li>הסדנה של קואנג</li>
+
 <li>הסינים</li>
 
 <li>הסיפור על גורה, שסופר לאווה, על ידי יויו</li>
@@ -530,6 +528,8 @@ Error message and password prompt
 <li>מרק כתום בסיר גדול</li>
 
 <li>משפחת באומן</li>
+
+<li>משפצים ובונים רהיטים</li>
 
 <li>משתדלים לא להגזים</li>
 
@@ -8523,7 +8523,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עוגת פרג שוקולד]] הסינים ג'ונג יה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[הסדנה של קואנג]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8543,7 +8543,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170702154312127" title="$:/temp/search">
+<div created="20161023184814872" modified="20170704191830768" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9950,6 +9950,19 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;list-links filter:&quot;[tag[הנה, כך]]&quot;&gt;&gt;
 
+
+</pre>
+</div>
+<div created="20170704162831150" modified="20170705072446783" title="הסדנה של קואנג">
+<pre>[img[pictures/hasadna-shel-queng.jpg]]
+
+!!![[יויו]]:
+
+[[בזמן שעבר|ארוחת כריסמס]], ותוך כדי תנועה, התחלנו לעשות עבודות חוץ, כלומר, כל אחד עושה את מה שהוא רגיל לעשות, ובנוסף אנחנו עושים פרויקטים משותפים. תמיד [[לז'נבייב|הקוסקוס]] יש קדימות מבחינת עובדים.
+
+ברובע ה-13 יש שלושה חללים ששייכים להורים של קואנג. אחד מהם משמש כמחסן של [[הסינים]] ועוד אחד הוא סדנת העבודה של קואנג. את [[שיפוץ הרהיטים|משפצים ובונים רהיטים]] שאלפרד התחיל עם [[דןדן]], הוא ממשיך עם [[קואנג]].
+
+בזמן האחרון התחלנו לקחת פרויקטים שכוללים עיצוב. אז [[אצלינו|הדירה]] נעשית כל עבודת המחשב, ואצל קואנג כל מה שמלכלך ומרעיש.
 
 </pre>
 </div>
@@ -11818,6 +11831,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[משפחת באומן]]&quot;&gt;&gt;</pre>
 </div>
+<div created="20170704162525777" modified="20170704191751372" title="משפצים ובונים רהיטים">
+<pre>[img[pictures/meshapzim-rahitim.jpg]] 
+
+!!![[יויו]]:
+
+בתקופה שעברנו [[לדירה|הדירה]], [[ואלפרד|אלפרד]] ניהל את השיפוץ, [[דןדן]] והוא התחילו לשפץ רהיטים, ולא רק, גם במשקופי עץ ובמדפים שהיו הם טיפלו יפה. 
+
+את הנטייה לאסוף  מהרחוב רהיטים שאנשים זרקו, או ארגזי עץ, ירשנו כולנו מגורה באותה תקופה. מפה לשם, [[קואנג]] הזמין את מי שרצה לעבוד [[בסטודיו שלו|הסדנה של קואנג]]. אלפרד מאד שמח, וככה קרה שהם משפצים ובונים יחדיו.
+
+</pre>
+</div>
 <div created="20170527144129954" modified="20170527144728501" tags="[[בחוות החיות]]" title="משתדלים לא להגזים">
 <pre>[img[pictures/lo-chazirit.jpg]]
 
@@ -12339,12 +12363,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170628145012336" modified="20170629205936070" tags="[[אירי טוענת]]" title="עם הפנים החוצה">
+<div created="20170628145012336" modified="20170703195101803" tags="[[אירי טוענת]]" title="עם הפנים החוצה">
 <pre>[img[pictures/im-hapanim-hachuza.jpg]]
 
 !!![[אירי]]:
 
-הגעתי למסקנה, שאני צריכה להיות מוכנה לרכב המואר והנחמד, שעשוי לבוא יום אחד, ולאסוף אותי מכאן. הרכב יעצור לידי, הדלת של המושב שליד הנהג, ששם נפשו בכפו, תיפתח, אני אכנס פנימה. אני אביט בנהג, הדלת תיסגר והרכב יתחיל לעלות. אלחץ את ידו תוך שאשמע את הגלגלים נכנסים, אני בטוחה שהוא יהיה חביב מאד. החלונות יסגרו ונמשיך לעלות, וזהו, [[ניסע|https://www.youtube.com/watch?v=7zaBCbXUkeU]]. כעת אני מנסה להעריך כמה זמן אורכת נסיעה כזאת, וחושבת איזה מין תיק אני  מכינה, ואיפה הכי כדאי לי לחכות.
+הגעתי למסקנה, שאני צריכה להיות מוכנה לרכב המואר והנחמד, שעשוי לבוא יום אחד, ולאסוף אותי מכאן. הרכב יעצור לידי, הדלת של המושב שליד הנהג, ששם נפשו בכפו, תיפתח, ואני אכנס פנימה. אני אביט בנהג, הדלת תיסגר והרכב יתחיל לעלות. אלחץ את ידו תוך שאשמע את הגלגלים נכנסים, אני בטוחה שהוא יהיה חביב מאד. החלונות יסגרו ונמשיך לעלות, וזהו, [[ניסע|https://www.youtube.com/watch?v=7zaBCbXUkeU]]. כעת אני מנסה להעריך כמה זמן אורכת נסיעה כזאת, וחושבת איזה מין תיק אני  מכינה, ואיפה הכי כדאי לי לחכות.
 
 </pre>
 </div>
@@ -12938,12 +12962,12 @@ Fapina''
 
 לצ'ן יש אופי של חקלאי. הוא משקים קום, הוא אחראי על המשאית הקטנה של [[הסינים]], הוא חזק, חרוץ, ממושמע, נחמד ומצחיק טילים. </pre>
 </div>
-<div created="20170324140059460" modified="20170527175653344" tags="[[אחות כהן]]" title="צ'נג">
+<div created="20170324140059460" modified="20170704123730095" tags="[[אחות כהן]]" title="צ'נג">
 <pre>[img[pictures/chang.jpg]]
 
 !!![[גורה]]:
 
-[[אירי]] טוענת, שצ'נג הוא [[זקוף גו|זקופי הגו]]. צ'נג המפואר עם [[דניאל]] המפואר גם כן, פתחו את האתר הזה.
+[[אירי]] טוענת, שגם צ'נג הוא [[זקוף גו|זקופי הגו]]. צ'נג המפואר עם [[דניאל]] המפואר גם כן, פתחו את האתר הזה.
 
 הוא בן יחיד, הוא מסיים השנה תואר שני בסטטיסטיקה, 
 הוא שולט ברזי המרשתת, הוא מתגורר בדירת חדר שקנה ושיפץ, לא רחוק מאיתנו.</pre>
@@ -12998,12 +13022,15 @@ Fapina''
 * לאחר שהצלי התקרר מעט (20 דקות), מוסיפים מים כדי כיסוי ומבשלים אותו מעל להבה נמוכה שעה.
 * לאחר שעה מערבבים בקערה את החרדל, היין, הדבש והתבלינים. מוסיפים אותם לצלי שעל הכיריים וממשיכים לבשל שלוש שעות נוספות לפחות.</pre>
 </div>
-<div created="20170323213155309" modified="20170417190404798" tags="[[אחות כהן]]" title="קואנג">
+<div created="20170323213155309" modified="20170704125840197" tags="[[אחות כהן]]" title="קואנג">
 <pre>[img[pictures/queng.jpg]]
 
 !!![[גורה]]:
 
 קואנג בסינית זה היקום.
+
+הוא למד עיצוב תעשייתי, ויש לו [[חלל עבודה|הסדנה של קואנג]] ברובע ה-13.
+הוא תמיד העדיף להתפרנס מהעבודה בשיפוצים עם [[חבריו|הסינים]], ובזמן האחרון אלפרד והוא [[משפצים ובונים רהיטים]] במלוא האון.
 </pre>
 </div>
 <div created="20170415002104316" modified="20170415005017204" tags="[[מתכוני ארוחת הכריסמס]]" title="קוסקוס">
