--- a/index.html
+++ b/index.html
@@ -8539,7 +8539,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="אירי גורה הגשר [[איתן וג'ואל כהן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[חשיפה לצפון]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10590,12 +10590,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 חנות הדיסקים נמצאת בקומה הראשונה של [[געזונטהייטס]]. היא שייכת [[לשלום|שלום]], כמו הבניין כולו, [[ואווה היא זו|מוכרת הדיסקים/dj]] שמחזיקה אותה. בתוך חנות הדיסקים יש אולפן קטן, שמשרת את [[גלי זחל]].</pre>
 </div>
-<div created="20170711174005898" modified="20170711180214225" tags="סדרות" title="חשיפה לצפון">
+<div created="20170711174005898" modified="20170714161649609" tags="סדרות" title="חשיפה לצפון">
 <pre>[img[pictures/northern-exposure.jpg]]
 
 !!![[יויו]]:
 
-[[its not the thing that fling, its the fling itself|https://www.youtube.com/watch?v=V6zmMWfzv38]]</pre>
+[[its not the thing you fling, its the fling itself|https://www.youtube.com/watch?v=V6zmMWfzv38]]</pre>
 </div>
 <div created="20170407152300115" modified="20170412203424705" tags="[[מתכוני ארוחת הכריסמס]]" title="טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן">
 <pre>[img[pictures/tost.jpg]]
